--- a/.github/workflows/github-workflow-validator.yml
+++ b/.github/workflows/github-workflow-validator.yml
@@ -36,6 +36,8 @@ jobs:
           echo "EOF" >> "$GITHUB_OUTPUT"
       - name: Comment workflow validator results
         uses: thollander/actions-comment-pull-request@v2
+        permissions:
+          pull-requests: write
         if:  ${{ (github.ref != 'refs/heads/main') }}
         with:
           message: |
